--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.5.3"
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
