--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.5.3"
